--- a/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei Ciulpan_872394.tex
+++ b/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei Ciulpan_872394.tex
@@ -170,24 +170,38 @@ In questo capitolo vengono dettagliati i dispositivi hardware utilizzati nel pro
 \section{Raspberry Pi}
 %
 
-Il Raspberry Pi (Figura 6) è una serie di piccoli computer (system-on-chip) dalle dimensioni simili a quelle di una carta di credito. La scheda è stata sviluppata nel Regno Unito (Fondazione Raspberry Pi). Le prime versioni avevano poca potenza computazionale e sono state progettate con l'intenzione di offrire a insegnanti e studenti uno strumento semplice e poco costoso con cui poter insegnare e imparare a programmare. La scheda ha avuto un enorme successo anche in altri campi (e.g. robotica) e con ogni nuova versione veniva migliorata. Le ultime versioni sono assai potenti e possono essere utilizzati per tante altre cose. Le schede sono basate su sistemi operativi di tipo GNU/Linux, in particolare Raspbian, un sistema operativo sviluppato apposta per la scheda, che può essere scaricato dal sito della fondazione (https://www.raspberrypi.org/downloads/). 
+Raspberry Pi (Figura 6) è una serie di piccoli computer (system-on-chip) dalle dimensioni simili a quelle di una carta di credito. La scheda è stata sviluppata nel Regno Unito (Fondazione Raspberry Pi). Le prime versioni avevano poca potenza computazionale e sono state progettate con l'intenzione di offrire a insegnanti e studenti uno strumento semplice e poco costoso con cui poter insegnare e imparare a programmare. La scheda ha avuto un enorme successo anche in altri campi (e.g. robotica) e con ogni nuova versione è stata migliorata. Le ultime versioni sono assai potenti e possono essere utilizzati per tante altre cose. Le schede sono basate su sistemi operativi di tipo GNU/Linux, in particolare Raspbian che può essere scaricato dal sito della fondazione (\url{https://www.raspberrypi.org/downloads/}). 
 
-La scheda utilizzata nel progetto (Raspberry Pi 3B+) possiede un'architettura su 64 bit... to be continued
-\\
-Problema sistema operativo 32 bit e soluzione (openSUSE)... to be continued
-\\
-Lo scopo principale di questo dispositivo all'interno del progetto è di hostare il server... to be continued
-
+La scheda utilizzata nel progetto (Raspberry Pi 3B+, \url{https://www.raspberrypi.org/products/raspberry-pi-3-model-b-plus/}) possiede un'architettura su 64 bit, essenziale per poter utilizzare in maniera efficiente MongoDB (che è limitato a una memoria di 2GB su un sistema a 32bit). Durante lo sviluppo del progetto ho scoperto che Raspbian in realtà non è stato ancora aggiornato per essere un sistema operativo a 64 bit, perciò non poteva sfruttare al meglio la scheda. Come soluzione a questo problema, è stato installato un sistema operativo chiamato openSUSE Tumbleweed (\url{https://software.opensuse.org/distributions/tumbleweed}) che funziona su architetture a 64 bit. 
+La Raspberry Pi 3B+ possiede inoltre una scheda WiFi, il che la rende un buon candidato per lo scopo principale del progetto, ovvero quello di hostare il server.
 
 \begin{figure}
-	\center{\includegraphics[width=0.5\linewidth]{./img/raspi.jpg}}
+	\center{\includegraphics[width=0.4\linewidth]{./img/raspi.jpg}}
 	\caption{Scheda Raspberry Pi}
 	\label{fig:usecase}
 \end{figure}
 
 
-
 \section{Arduino UNO}
+%
+
+Arduino\cite{arduino_storia} è nata ad Ivrea nel 2005 come piattaforma di prototipazione elettronica di basso costo e open-source (dettaglio molto importante che ha portato al successo che ha avuto) che si basa su hardware e software flessibili e facili da usare. Il nome della scheda deriva di quello del bar di Ivrea frequentato dai fondatori del progetto ed la scheda è stata creata per artisti, designer e hobbisti. Essendo open-source, ha avuto un grande successo nel mondo degli hobbisti, anche a livello mondiale (tale da diventare una delle invenzioni piu' considerevoli nella storia dell'elettronica), grazie alla facilità di programmazione, basso costo e soprattutto disponibilità in rete delle informazioni necessarie per poter permettere a persone con grandi idee e poche capacità informatiche ed elettroniche di realizzare i propri progetti. 
+
+Nei giorni d'oggi Arduino potrebbe anche non essere la scelta immediata, anzi, ormai ci sono schede piu' potenti, piu' veloci e con migliori rapporti prestazioni/prezzo, ma non scordiamoci che è tutto grazie agli sviluppatori della scheda. Perchè scegliere, quindi, un Arduino? Essendo la scheda che ha fatto partire tutto, è anche la scheda piu' studiata e ciò significa che gira intorno a piu' informazioni, piu' librerie già pronte, piu' dispositivi compatibili e ha anche un sito di appassionati che si aiutano a vicenda dove si possono trovare tutorial, libri e tant'altro.
+
+La scheda utilizzata nel progetto, Arduino UNO (Figura 7), è assolutamente la scheda piu' conosciuta al mondo e si può ormai trovare a dei prezzi molto bassi (ci sono tanti clone diversi in rete grazie al fatto di essere OpenHardware). E' basato sul microcontrollore ATmega328P (\url{https://www.sparkfun.com/datasheets/Components/SMD/ATMega328.pdf}) ed ha 14 pin digitali e 6 analogici. Alcuni pin sono piu' speciali: ad esempio tra i pin digitali ci sono 6 che hanno anche la funzione PWM (si veda la sezione 2.5 "Servomotore") e 4 per il protocollo SPI (si veda la sezione 2.10.4 "SPI"), mentre tra i pin analogici ci sono 2 per il protocollo I2C (si veda la sezione 2.10.3 "I2C"). Tutto questo rende l'Arduino UNO un dispositivo ideale per il progetto. L'unica cosa che manca è la possibilità di accedere alla connessione WiFi, indispensabile per l'IoT, ma questo problema è stato risolto grazie ad un chip WiFi chiamato ESP8266 (si veda la sezione 2.9 "ESP8266").
+
+\begin{figure}
+	\center{\includegraphics[width=0.4\linewidth]{./img/uno.jpg}}
+	\caption{Scheda Arduino UNO}
+	\label{fig:usecase}
+\end{figure}
+
+
+\subsection{Arduino Programming Language}
+
+La scheda Arduino UNO (e qualsiasi altra board compatibile con Arduino) può essere facilmente programmata utilizzando, ma non solo, l'Arduino IDE (Arduino Integrated Development Software), un software sviluppato da Arduino.cc e funzionante sulle 3 piattaforme dominanti (Windows, Linux e MacOS). Il linguaggio di programmazione si chiama "Arduino Programming Language"\cite{sistemi_embedded_atrent} ed è un derivato di Wiring (una piattaforma di sviluppo open-source composta da un linguaggio di programmazione, un IDE ed un circuito stampato basato su un microcontrollore). La sintassi è molto simile a quella del linguaggio C/C++; infatti il linguaggio Arduino è un insieme di funzioni e librerie C/C++ che possono essere chiamate dal codice. Forse la cosa diversa che si nota di piu' è la struttura dello sketch (sinonimo di programma): per poter funzionare vengono sempre definite due funzioni iniziali, setup() e loop(); la prima viene eseguita soltanto una volta all'avvio del programma e serve per dichiarare variabili, modalità dei pin (e.g input o output) ecc., mentre nella seconda viene messo il programma vero e proprio che viene eseguito ripetutamente... all'infinito.
+
 %
 \section{RTC (perchè la Raspberry Pi non ce l'ha ed è privo di connessione Internet)}
 %
@@ -203,7 +217,7 @@ PWM
 %
 \section{Keypad}
 %
-\section{ESP-01}
+\section{ESP8266}
 %
 Problematiche
 \\
@@ -307,9 +321,19 @@ A. Tumino, Internet of Things: gli oggetti intelligenti prima di ogni "cosa", 24
 \bibitem{IoT}
 M. Rouse, Internet of Things (IoT), ultimo aggiornamento Marzo 2019.
 \url{https://internetofthingsagenda.techtarget.com/definition/Internet-of-Things-IoT}
-\end{thebibliography}
 % 
+\bibitem{arduino_storia}
+Arduino, Un po' di storia.
+\url{https://playground.arduino.cc/Italiano/StoriaDiArduino/}
+%
 
+\bibitem{sistemi_embedded_atrent}
+A. Carraturo, A. Trentini, Sistemi Embedded: Teoria e Pratica, prima edizione: Settembre 2017.
+\url{http://www.ledizioni.it/prodotto/a-carraturo-a-trentini-sistemi-embedded-teoria-pratica/}
+%
+
+\end{thebibliography}
+%
 \end{document}
 
 
