--- a/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei Ciulpan_872394.tex
+++ b/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei Ciulpan_872394.tex
@@ -126,7 +126,7 @@ L'attività principale del tirocinio è la realizzazione di un sistema di contro
 	\end{enumerate}
 \end{enumerate}
 
-Il dispositivi scelti sono stati un Arduino UNO (per la parte hardware) e un Raspberry Pi 3B+ su cui hostare il server. 
+I dispositivi scelti per soddisfare i requisiti sono stati un Arduino UNO (per la parte hardware) e un Raspberry Pi 3B+ su cui hostare il server. 
 Nella figura 2 si può vedere una foto con il prototipo finito.
 Nelle figure 3 e 4 si possono trovare rispettivamente un diagramma dei casi d'uso e un diagramma di flusso del sistema.
 
