--- a/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
+++ b/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
@@ -78,8 +78,7 @@
 
 % 
 %			CAPITOLO 1: Intro
-\chapter{Introduzione}
-\label{cap1}
+\chapter{Introduzione}\label{cap:introduzione}
 %
 
 Il controllo accessi è un sistema di protezione che permette l'accesso solo a determinate persone per via di qualche procedura di autenticazione: nel mondo fisico si può parlare di una semplice serratura (storicamente il sistema piu' utilizzato in assoluto) che può essere aperta solo dalle persone in possesso della chiave, mentre nel mondo dell'informatica si può notare l'enorme utilizzo delle procedure di autenticazione (login) che aiutano il sistema, tramite l'inserimento di un nome utente e password, a determinare automaticamente se una persona è autorizzata ad accedere alle risorse del sistema stesso.
@@ -88,14 +87,13 @@ Il controllo accessi\cite{controllo_accessi} è un tema molto sviluppato nel cam
 
 La tesi si propone di trattare un sistema ibrido in cui il mondo fisico e il mondo informatico lavorano insieme: attraverso sensori ed attuatori è possibile avere la comunicazione tra i due mondi. 
 Si tratta di un sistema IoT (Internet of Things), ovvero un sistema in cui la connessione Internet viene estesa anche al mondo degli oggetti fisici (smart objects\cite{smart_objects}) di uso comune. Gli oggetti si rendono riconoscibili e acquisiscono intelligenza grazie al fatto di possedere una o piu' delle seguenti funzionalità: identificazione, localizzazione, diagnosi di stato, interazione con l'ambiente circostante, elaborazione dati e ovviamente connessione.
-Gli oggetti intelligenti di un sistema IoT sono normalmente dotati di un processore embedded, sensori e attuatori e sono in grado di agire sui dati raccolti dall'ambiente e, ancora piu' importante, mandare questi dati in rete dove possono poi essere analizzati\cite{IoT}. Un semplice esempio di un sistema IoT si può trovare in Figura 1.
+Gli oggetti intelligenti di un sistema IoT sono normalmente dotati di un processore embedded, sensori e attuatori e sono in grado di agire sui dati raccolti dall'ambiente e, ancora piu' importante, mandare questi dati in rete dove possono poi essere analizzati\cite{IoT}. Un semplice esempio di un sistema IoT si può trovare in Figura 1.\marginpar{atrent: metti riferimenti con \\ref{key}, commento valido su tutto il testo}
 
 Le seguente sezione di questo capitolo introdurrà il progetto stesso (denominato SimSim) che poi verrà dettagliato nei prossimi capitoli.
 
 \begin{figure}
 	\includegraphics[width=\linewidth]{./img/iot_diagram.png}
-	\caption{Esempio di sistema IoT}
-	\label{fig:iot1}
+	\caption{Esempio di sistema IoT}\label{fig:iot1}
 \end{figure}
 
 %
